<resources>
    <!-- H1 -->
    <string name="h1_timer_default">00:00:00</string>
    <string name="h1_timer_zero">00:00</string>
    <string name="h1_stopwatch_counter_default">0</string>

    <!-- H2 -->
    <string name="h2_greeting">Kaixo!</string>
    <string name="h2_done">Done!</string>
    <string name="h2_resting">Resting...</string>
    <string name="h2_go">Go!</string>
    <string name="h2_next_placeholder">---</string>
    <string name="h2_next_task_prefix">Next: %1$s</string>
    <string name="h2_edit_task">Edit task</string>
    <string name="h2_add_new_task">Add new task</string>
    <string name="h2_add_new_group">Add new group</string>
    <string name="h2_edit_group">Edit Group</string>

    <!-- H3 -->
    <string name="h3_lists">Lists</string>
    <string name="h3_timer">Timer</string>

    <!-- Button -->
    <string name="btn_next">Next</string>
    <string name="btn_start_roulette">Start roulette</string>
    <string name="btn_timer_save">Save timer</string>
    <string name="btn_timer_reset">Reset timer</string>
    <string name="btn_stopwatch_reset">Reset Stopwatch</string>
    <string name="btn_create_task">Create Task</string>
    <string name="btn_update_task">Update task</string>
    <string name="btn_delete_task">Delete task</string>
    <string name="btn_create">Create</string>
    <string name="btn_about_jaguar">About Jaguar</string>
    <string name="btn_delete_group">Delete group</string>
    <string name="btn_add_group">+ Add New Group</string>
    <string name="btn_save">Save</string> <!-- TODO common -->

    <!-- Radio -->
    <string name="radio_default_system">Default (System)</string> <!-- TODO common -->

    <!-- Checkbox -->
    <string name="checkbox_lock_screen_from_falling_asleep">Keep screen awake</string>

    <!-- InputLabel -->
    <string name="label_task_duration">Duration (HHMMSS)</string>
    <string name="label_task_label">Task Label</string>
    <string name="label_group_name">Group Name</string>
    <string name="label_group">Current Group</string>
    <string name="label_rest_duration">Rest Duration (HHMMSS)</string>

    <!-- InputHints -->
    <string name="hint_timer">HHMMSS</string>

    <!-- Toasts -->
    <string name="toast_name_empty">Name cannot be empty</string>
    <string name="toast_label_empty">Label cannot be empty</string>
    <string name="toast_saved_timer">Timer saved</string>

    <!-- AltDescription -->
    <string name="altdescr_open_settings">Open Settings</string>
    <string name="altdescr_lock_icon">Lock screen</string>
    <string name="altdescr_home_nav">Home</string>
    <string name="altdescr_stopwatch_nav">Stopwatch</string>
    <string name="altdescr_timer_nav">Timer</string>
    <string name="altdescr_play_pause">Play or pause</string>
    <string name="altdescr_repeat_task">Repeat task</string>
    <string name="altdescr_increase_duration">Add 30 seconds</string>
    <string name="altdescr_skip_task">Skip task</string>
    <string name="altdescr_reset_group">Reset group</string>
    <string name="altdescr_start_group">Start group</string>
    <string name="altdescr_add_task">Add task</string>
    <string name="altdescr_edit">Edit</string>
    <string name="altdescr_ascend">Move up</string>
    <string name="altdescr_descend">Move down</string>
    <string name="altdescr_save">Save</string>
    <string name="altdescr_shuffle_nav">Shuffle</string>
    <string name="altdescr_close">Close</string>

    <!-- Braille game -->
    <string name="altdescr_prev_question">Erase last letter</string>
    <string name="altdescr_skip_question">Submit letter</string>
    <string name="toast_tap_some_dots">Tap some dots first</string>
    <string name="label_choose_level">Choose a level to practice</string>
    <string name="h2_no_leaderboard_entries">[ No scores yet ]</string>

    <!-- APP -->
    <string name="app_name" translatable="false">@string/product_jaguar</string>
    <string name="app_desc">A minimal, privacy-first focus session app designed to help you stay present and intentional with your time.</string>
    <string name="activity_stage">Stage</string>
    <string name="activity_score">Score</string>
    <string name="h1_leaderboard">Leaderboard</string>
    <string name="label_submit">Submit</string>
    <string name="h1_choose_stage">Choose Stage</string>
    <string name="activity_stage_selector">Stage Selector</string>
    <string name="btn_grade_1">Grade 1</string>
    <string name="btn_grade_2">Grade 2</string>
    <string name="h_portuguese">Portuguese</string>
    <string name="h_spanish">Spanish</string>
    <string name="h_english">English</string>
</resources>

