<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:background="@color/bg_1"
    android:layout_height="match_parent"
    style="@style/VerticalListDivided">

    <LinearLayout style="@style/HorizontalListDivided">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <FrameLayout
            android:id="@+id/open_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/bg_1"
            android:paddingTop="12sp"
            android:paddingBottom="12sp">

            <ImageView
                android:src="@drawable/px_cog"
                app:tint="@color/foreground"
                android:contentDescription="@string/altdescr_open_settings"
                style="@style/Icon24" />
        </FrameLayout>
    </LinearLayout>

    <TextView
        style="@style/H2"
        android:textColor="@color/h1"
        android:layout_marginBottom="@dimen/space_between_elements"
        android:text="@string/h1_leaderboard" />

    <FrameLayout
        android:layout_width="match_parent"
        android:background="@color/bg_2"
        android:padding="@dimen/small"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/leaderboard_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/VerticalListDivided" />
        </ScrollView>

        <TextView
            android:id="@+id/empty_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="gone"
            android:textColor="@color/disabled"
            style="@style/H3"
            android:text="@string/h2_no_leaderboard_entries" />
    </FrameLayout>

    <Button
        android:id="@+id/lvl_selector"
        android:layout_width="match_parent"
        android:text="@string/label_choose_level"
        style="@style/BTN1" />

</LinearLayout>
